i18n/ja/docusaurus-plugin-content-docs/version-18/MSC/overview.md
---
id: overview
title: 概要
sidebar_label: 概要
---

Maintenance & Security Center (MSC) は、データとストラクチャーファイルを検証、保守、バックアップそして圧縮および暗号化するツールを提供します。 MSC ウィンドウは、すべての 4Dアプリケーション (4Dシングルユーザー、4D Server、4D Desktop) から利用できます。

**注**: MSC は 4Dリモート接続ではご利用いただけません。

MSCウィンドウを開く方法は幾つかあります。 アクセスの方法により、"メンテナンス" モードまたは "標準" モードのいずれによってデータベースを開くかが決定されます。 メンテナンスモードの場合、4D はデータベースを開かず、その参照だけが MSC に供給されます。 標準モードの場合、4D はデータベースを開きます。

## メンテナンスモードでの表示

メンテナンスモードでは、MSCウィンドウだけが表示されます (4Dアプリケーションはデータベースを開きません)。 つまり、損傷が激しいため 4D が標準モードで開けないデータベースにもアクセスできるということです。 さらに、特定の操作 (圧縮、修復など) はデータベースをメンテナンスモードで開くことを要求します ([アクセス権](#アクセス権) 参照)。

次の 2つの場所から、MSC をメインテナンスモードで開くことができます:

- **標準の開くダイアログボックス**<br /> 標準のデータベースを開くダイアログボックスには **開く** ボタンに関連付けられているメニューに **Maintenance & Security Center** オプションが含まれます: ![](../assets/en/MSC/MSC_standardOpen.png)
- **ヘルプ＞メンテナンス＆セキュリティセンター (MSC)** メニュー、または、ツールバーの **MSC** ボタンの使用 (データベースが開かれていない状態で)  
  ![](../assets/en/MSC/mscicon.png) この機能を呼び出すと、標準のファイルを開くダイアログボックスが表示され、検査するデータベースを指定できます。 データベースは開かれません。

## 標準モードでの表示

標準モードではデータベースが開いています。 このモードでは、特定の保守機能を使用できません。 この場合に MSCウィンドウを開く方法は幾つかあります。

- **ヘルプ＞メンテナンス＆セキュリティセンター (MSC)** メニュー、または、ツールバーの **MSC** ボタンの使用。  
  ![](../assets/en/MSC/mscicon.png)
- "msc" 標準アクションを割り当てたメニューコマンドやフォームオブジェクトを使用する ("標準アクション" 参照)。

- `OPEN SECURITY CENTER` ランゲージコマンドを使用する。

## アクセス権

特定の MSC機能は、MSC が開かれたモードによっては利用できません:

- バックアップ機能は、データベースが開かれている状態でしか利用できません (MSC は標準モードで開かれている必要があります)。
- データの圧縮、ロールバック、復元、修復、および暗号化の機能は、開いていないデータファイルでのみ使用できます (MSC はメインテナンスモードで開かれていなければなりません) 。 データベースが標準モードで開かれている時にこれらの機能を試みた場合は、メインテナンスモードでアプリケーション再起動を促すダイアログボックスが表示されます。
- 暗号化されたデータベースにおいては、暗号化されたデータまたは .journal ファイルへのアクセスには有効なデータキーが提供されている必要があります ([暗号化ページ](encrypt.md) 参照)。 提供されていない場合、暗号化されたデータは見ることができません。
